[package]
name = "devbox"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]

[dependencies]
clap = "2"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.5"
prettytable-rs = "0.6.7"
failure = "0.1.1"
failure_derive = "0.1.1"
colored = "1.6.0"
tempdir = "0.3.7"

[[bin]]
name = "devbox"
path = "src/bin/devbox.rs"
